<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".LoginActivity">



<ScrollView
    android:layout_width="match_parent"
    android:layout_centerInParent="true"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"

    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"

            android:layout_above="@+id/center_layout"

            android:text="@string/sign_up"/>


        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_user_icon"
            android:drawablePadding="16dp"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="16dp"


            />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"


            />


        <EditText
            android:id="@+id/inputMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_call_phone_icon"
            android:drawablePadding="16dp"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:padding="16dp"


            />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp" />


        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"

            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/terms_and_condition_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/colorPrimary"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/terms_and_condition"/>



        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_bg"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>
    <LinearLayout
        android:id="@+id/goto_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:fitsSystemWindows="true"

        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_have_account"
            android:textColor="@color/grey"
            android:textSize="18sp"


            />

        <TextView
            android:id="@+id/gotoRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"


            />
    </LinearLayout>

</RelativeLayout>