<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".LoginActivity">




    <LinearLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"

            android:layout_above="@+id/center_layout"

            android:text="@string/forgot_password"/>




        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"


            />




        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_bg"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/goto_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"

        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_have_password"
            android:textColor="@color/grey"
            android:textSize="18sp"


            />

        <TextView
            android:id="@+id/gotoRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"


            />
    </LinearLayout>

</RelativeLayout>