<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A7D3E8"
    tools:context=".activity.HomeActivity">

    <include
        android:id="@+id/detail_toolbar"
        layout="@layout/inner_toolbar"

        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_alignParentTop="true" />


    <LinearLayout
        android:id="@+id/containerViews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/detail_toolbar"
        android:background="@color/black"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"

            android:layout_marginEnd="20dp">

            <LinearLayout
                android:id="@+id/center_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">


                <EditText
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"

                    android:background="@color/grey"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/category"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"


                    />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"

                    android:background="@color/grey"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/title"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"


                    />


                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"

                    android:background="@color/grey"
                    android:drawablePadding="16dp"

                    android:hint="@string/start_date"
                    android:inputType="text"
                    android:padding="16dp"


                    />

                <TextView
                    android:id="@+id/preferred_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"

                    android:background="@color/grey"

                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/preferred_time"
                    android:inputType="text"
                    android:padding="16dp" />


                <EditText
                    android:id="@+id/period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"

                    android:background="@color/grey"

                    android:drawablePadding="16dp"

                    android:hint="@string/period"
                    android:inputType="text"
                    android:padding="16dp" />


                <TextView
                    android:id="@+id/choose_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"

                    android:background="@color/grey"

                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/choose_icon"
                    android:inputType="text"
                    android:padding="16dp" />

                <Button
                    android:id="@+id/create"
                    android:layout_width="229dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_bg"
                    android:text="@string/create"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </ScrollView>


    </LinearLayout>


</RelativeLayout>